--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 
 <body>
-<h2>I am moving my server to a new location. There will be approximately 1.5-2 Weeks Downtime</h2>
-<h2>Expected Downtime: 19/01/2018 - 30/01/2018</h2>
+<h2>The website is being update, please try again in a few minutes.</h2>
 </body>
 
 </html>
