fixed typo in msg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h2>The website is being update, please try again in a few minutes.</h2>
+<h2>The website is being updated, please try again in a few minutes.</h2>
 </body>
 
 </html>
